[package]
name = "albert-aya1-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
albert-aya1-common = { path = "../albert-aya1-common" }
memoffset = "0.2.1"

[[bin]]
name = "albert-aya1"
path = "src/main.rs"

[profile.release]
panic = "abort"

[workspace]
members = []
