[package]
name = "albert-aya3"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch="main" }
aya-log = { git = "https://github.com/aya-rs/aya-log", branch = "main" }
albert-aya3-common = { path = "../albert-aya3-common", features=["user"] }
anyhow = "1.0.42"

log = "0.4"
simplelog = "0.11"
structopt = { version = "0.3" }
tokio = { version = "1.5.0", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "albert-aya3"
path = "src/main.rs"
